--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.13.3",
     "fastapi[standard]>=0.129.0",
+    "psycopg[binary]>=3.3.2",
     "python-dotenv>=1.2.1",
     "structlog>=25.5.0",
 ]
